task complete time duration added

--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ li {
     align-items: flex-start;
 }
 
-li.completed {
+li.completed .task-name {
     text-decoration: line-through;
     color: #999;
 }
